--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
     <div class="cv-container">
         <div class="header">
-            <img src="C:\Users\ASUS\OneDrive\Pictures\Camera Roll\WhatsApp Image 2023-11-11 at 21.17.24_680e1531.jpg" alt="Foto Profil">
+            <img src="WhatsApp Image 2023-11-11 at 21.17.24_680e1531.jpg" alt="Foto Profil">
             <div>
                 <h1>Miftahul Jannah</h1>
                 <p>Kendari, 21 Februari 2005</p>
